@@ -45,7 +45,7 @@
 /**
  * Load Picture content class
  */
-require_once('classes/Content/Picture/Picture.php');
+require_once('classes/Content/SimplePicture/SimplePicture.php');
 
 /**
  * Represents an Image
@@ -55,7 +55,7 @@ require_once('classes/Content/Picture/Picture.php');
  * @author     Francois Proulx <francois.proulx@gmail.com>
  * @copyright  2005-2006 Francois Proulx, Technologies Coeus inc.
  */
-class Avatar extends Picture
+class Avatar extends SimplePicture
 {
     /**
      * Constructor
@@ -65,97 +65,6 @@ class Avatar extends Picture
     protected function __construct($content_id)
     {
         parent :: __construct($content_id);
-    }
-
-    /**
-     * Shows the administration interface for Avatar
-     *
-     * @param string $subclass_admin_interface HTML code to be added after the
-     *                                         administration interface
-     *
-     * @return string HTML code for the administration interface
-     */
-    public function getAdminUI($subclass_admin_interface = null, $title=null)
-    {
-        // Init values
-        $html = '';
-		$html .= "<ul class='admin_element_list'>\n";
-        // Show File admin UI + display the picture
-        $html .= "<li class='admin_element_item_container'>\n";
-        $html .= "<div class='admin_element_data'>\n";
-        $html .= "<div class='admin_element_label'>"._("Picture preview")." : </div>\n";
-        $html .= "<br>\n";
-
-        $html .= "<img src='".htmlentities($this->getFileUrl())."' alt='".$this->getFileName()."''>";
-        $html .= "</div>\n";
-        $html .= "</li>\n";
-
-        $html .= "<li class='admin_element_item_container'>\n";
-        $html .= "<div class='admin_element_label'>";
-        $html .= "<input type='radio' name='file_mode".$this->getId()."' value='by_upload' ". ($this->isLocalFile() ? "CHECKED" : "").">";
-        $html .= _("Upload a new file (Uploading a new one will replace any existing file)")." : </div>\n";
-        $html .= "<div class='admin_element_data'>\n";
-        $html .= '<input type="hidden" name="MAX_FILE_SIZE" value="1073741824" />';
-        $html .= '<input name="file_file_upload'.$this->getId().'" type="file" />';
-        $html .= "</div>\n";
-        $html .= "</li>\n";
-
-        $html .= "<li class='admin_element_item_container'>\n";
-        $html .= "<div class='admin_element_label'>";
-        $html .= "<input type='radio' name='file_mode".$this->getId()."' value='remote' ". (!$this->isLocalFile() ? "CHECKED" : "").">";
-        $html .= _("Remote file via URL")." : </div>\n";
-        $html .= "<div class='admin_element_data'>\n";
-
-        if ($this->isLocalFile()) {
-            $html .= "<input name='file_url".$this->getId()."' type='text' size='50'/>";
-        } else {
-            $html .= "<input name='file_url".$this->getId()."' type='text' size='50' value='".$this->getFileUrl()."'/>";
-        }
-
-        $html .= "</div>\n";
-        $html .= "</li>\n";
-
-        if (!$this->isLocalFile()) {
-            $html .= "<li class='admin_element_item_container'>\n";
-            $html .= "<div class='admin_element_label'>"._("File URL")." : </div>\n";
-            $html .= "<div class='admin_element_data'>\n";
-            $html .= $this->getFileUrl();
-            $html .= "</div>\n";
-            $html .= "</li>\n";
-        }
-		$html .= "</ul>\n";
-        $html .= $subclass_admin_interface;
-        return parent :: getAdminUI($html, $title);
-    }
-
-    /**
-     * Processes the input of the administration interface for RssAggregator
-     *
-     * @return void
-     */
-    public function processAdminUI()
-    {
-        if ($this->isOwner(User :: getCurrentUser()) || User :: getCurrentUser()->isSuperAdmin()) {
-            parent :: processAdminUI();
-        }
-    }
-
-    /**
-     * Retreives the user interface of this object.
-     *
-     * @return string The HTML fragment for this interface
-     */
-    public function getUserUI()
-    {
-        // Init values
-        $html = '';
-
-        $html .= "<div class='user_ui_container ".get_class($this)."'>\n";
-
-        $html .= "<img src='".htmlentities($this->getFileUrl())."' alt='".$this->getFileName()."''>";
-        $html .= "</div>\n";
-
-        return $html;
     }
 
     /**
