@@ -1,6 +1,7 @@
 2007-01-14 Benoit Grégoire  <bock@step.polymtl.ca>
 	* Dependencies.php, AuthenticatorRadius.php:  Fix bug #287 (Dependencies not being detected properly)
-
+	* Content.php: Make hasDisplayableMetadata() consider Authors, and make it a bit faster.
+	
 2007-01-13 Benoit Grégoire  <bock@step.polymtl.ca>
 	* Content.php:  Add setUserUIMainDisplayContent() and setUserUIMainInteractionArea()
 	to simplify writing subclasses and port all content subclasses to the new API.
